--- a/style.css
+++ b/style.css
@@ -103,11 +103,142 @@ p{
     border-image-slice: 1;
 }
 
-.working-project{
+.working-project-area{
     width: 100%;
-    height: 700px;
+    height: 650px;
     background-color: #E5E5E5;
     float: left;
     padding-top: 50px;
     padding-bottom: 50px;
+    margin-bottom: 30px;
+}
+
+.customer-review{
+    height: 500px;
+    margin-bottom: 60px;
+    float: left;
+}
+
+.third-width{
+    width: 25.3%;
+    float: left;
+    margin: 2%;
+    padding: 2%;
+    box-shadow: 5px 5px 30px gray;
+    border-radius: 15px;
+
+}
+
+.third-width img{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin-left: 35%;
+    box-shadow: 5px 5px 20px gray;
+}
+
+.third-width h3{
+    text-align: center;
+}
+
+.third-width p{
+    text-align: center;
+}
+
+/*.working-project-style{
+    border-radius: 15px;
+}*/
+
+.working-project-style img{
+    border-radius: 5px;
+    width: 95%;
+    height: 30%;
+    margin-left: 0;
+}
+
+.working-project-style h3{
+    text-align: left;
+    color: black;
+    font-size: 25px;
+}
+
+.working-project-style p{
+    text-align: left;
+    color: gray;
+}
+
+.inquiry-area{
+    width: 100%;
+    height: 330px;
+    float: left;
+}
+
+#inquiry{
+    width: 900px;
+    height: 300px;
+    margin-left: 250px;
+    background-image: url("images/Group_33094_1.png");
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
+
+#inquiry h2{
+    color: white;
+    padding-left: 120px;
+    padding-top: 80px;
+}
+
+#chat-button{
+    padding-left: 350px;
+}
+
+#chat-button a{
+    text-decoration: none;
+    color: black;
+    font-size: 20px;
+    padding: 10px 30px;
+    border-radius: 7px;
+    background-image: linear-gradient(45deg, yellow, tomato);
+}
+
+#contact-area{
+    float: left;
+    width: 100%;
+    height: 180px;
+    margin-bottom: 20px;
+}
+
+#contact h3{
+    text-align: center;
+    color: gray;
+    font-size: 20px;
+}
+
+#contact h2{
+    text-align: center;
+    color: black;
+    font-size: 20px;
+}
+
+.contact-img{
+    width: 30px;
+    height: 30px;
+    padding: 10px;
+    text-align: center;
+}
+
+#contact-img-div{
+    margin-left: 600px;
+}
+
+footer{
+    width: 100%;
+    float: left;
+    margin-bottom: 0px;
+
+}
+
+footer p{
+    text-align: center;
+    color: black;
 }
