--- a/style.css
+++ b/style.css
@@ -184,7 +184,7 @@ p{
 
 #inquiry h2{
     color: white;
-    padding-left: 120px;
+    padding-left: 40%;
     padding-top: 80px;
 }
 
@@ -228,7 +228,7 @@ p{
 }
 
 #contact-img-div{
-    margin-left: 600px;
+    margin-left: 44%;
 }
 
 footer{
